--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
   <body>
     <header class="page-header">
-	<div class="container">
-      Максим Магомель, +371 25128665
-	  </div>
-    </header>
+  <div class="container">
+    <a href="mailto:mailto:maxim30000@hotmail.fr">mailto:maxim30000@hotmail.fr</a>
+    <a href="tel:tel:+37125128665">+37125128665</a>
+  </div>
+</header>
 
     <section class="hero-image">
 	<div class="container">
@@ -24,7 +25,7 @@
     <section class="intro">
 	<div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Пара слов о себе</h3>
+	  <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
       <p>Текст о том, чем могу быть полезен.</p>
