--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+  
     <meta charset="UTF-8">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -10,25 +11,28 @@
   <body>
     <header class="page-header">
   <div class="container">
-    <a href="mailto:mailto:maxim30000@hotmail.fr">mailto:maxim30000@hotmail.fr</a>
+    <a href="maxim30000@hotmail.fr">maxim30000@hotmail.fr</a>
     <a href="tel:tel:+37125128665">+37125128665</a>
   </div>
 </header>
-
+ 
     <section class="hero-image">
 	<div class="container">
-      <h1 class="heading">Будующй фронтент-разработчик</h1>
-      <p>Junior верстальщик</p>
+      <h1 class="heading">Княгиня Лифляндская, Великолужская, Саарбрюкенская, и иных.</h1>
+      <p>Во веке !</p>
 	  </div>
     </section>
-
-    <section class="intro">
+	
+      <section class="intro">
 	<div class="container">
-      <h2 class="subheading">Давайте познакомимся</h2>
+      <h2 class="subheading">Елизавета Имантская</h2>
+	  <figure class="project-image">
+  <img class="border" src="files/user.jpg" width="900" height="536" alt="Елизавета Имантская">
+</figure>
 	  <h3>Пара слов о себе</h3>
-      <p>Текст с парой слов о себе.</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Текст о том, чем могу быть полезен.</p>
+      <p>Злая и противная, завистливая.</p>
+      <h3>Чем могу быть полезена</h3>
+      <p>Могу испугать, укусить исподтишка,могу нагадить.</p>
 	  </div>
     </section>
 
@@ -43,11 +47,13 @@
       <p>Статический блог про обучение HTML и CSS.</p>
 	  </div>
     </section>
+	<a class="button" href="source/project/index.html">Открыть страницу</a>
 
     <footer class="page-footer">
-	<div class="container">
-      Контакты в подвале
-	  </div>
-    </footer>
+  <div class="container">
+    <a class="footer-email" href="maxim30000@hotmail.fr">maxim30000@hotmail.fr</a>
+    <a class="footer-phone" href="tel:+37125128665">+37125128665</a>
+  </div>
+</footer>
   </body>
 </html>
